fix button layout on mobile

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -68,13 +68,6 @@ button {
   }
 }
 
-@media all and (max-width: 30em) {
-  button {
-    display: block;
-    margin: 0.4em auto;
-  }
-}
-
 footer {
   text-align: center;
 }
